; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_speed.c_pkey_print_message.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_speed.c_pkey_print_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_err = common dso_local global i32 0, align 4
@mr = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"+DNP:%ld:%d:%s:%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"Doing %ld %u bits %s %s's: \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64, i32, i32)* @pkey_print_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pkey_print_message(i8* %0, i8* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @bio_err, align 4
  %12 = load i64, i64* @mr, align 8
  %13 = icmp ne i64 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0)
  %16 = load i64, i64* %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 (i32, i8*, i64, ...) @BIO_printf(i32 %11, i8* %15, i64 %16, i32 %17, i8* %18, i8* %19)
  %21 = load i32, i32* @bio_err, align 4
  %22 = call i32 @BIO_flush(i32 %21)
  ret void
}

declare dso_local i32 @BIO_printf(i32, i8*, i64, ...) #1

declare dso_local i32 @BIO_flush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
